Added options for changing colors and font

--- a/sxiv.1
+++ b/sxiv.1
@@ -84,8 +84,26 @@ Set scale mode according to MODE character. Supported modes are: [d]own,
 .B \-t
 Start in thumbnail mode.
 .TP
+.BI "\-u " FONT
+Set bar font to FONT. Example: -u "-*-fixed-medium-r-*-*-13-*-*-*-*-60-*-*"
+.TP
 .B \-v
 Print version information to standard output and exit.
+.TP
+.BI "\-W " COLOR
+Set background color to COLOR. Example: -W "#777777".
+.TP
+.BI "\-w " COLOR
+Set fullscreen background color to COLOR. Example: -w "#000000".
+.TP
+.BI "\-x " COLOR
+Set select color to COLOR. Example: -x "#DDDDDD".
+.TP
+.BI "\-Y " COLOR
+Set bar background color to COLOR. Example: -Y "#222222".
+.TP
+.BI "\-y " COLOR
+Set bar foreground color to COLOR. Example: -y "#EEEEEE".
 .TP
 .B \-Z
 The same as `\-z 100'.
