Updated documentation regarding gamma correction

--- a/sxiv.1
+++ b/sxiv.1
@@ -164,6 +164,19 @@ marked images forward.
 Go
 .I count
 marked images backward.
+.TP
+.B {
+Decrease gamma correction by
+.I count
+steps.
+.TP
+.B }
+Increase gamma correction by
+.I count
+steps.
+.TP
+.B Ctrl-g
+Reset gamma correction.
 .SH THUMBNAIL KEYBOARD COMMANDS
 The following keyboard commands are only available in thumbnail mode:
 .TP
@@ -289,16 +302,6 @@ Flip image horizontally.
 .TP
 .B _
 Flip image vertically.
-.SS Gamma Correction
-.TP
-.B {
-Decrease gamma.
-.TP
-.B }
-Increase gamma.
-.TP
-.B Ctrl-g
-Reset gamma.
 .SS Miscellaneous
 .TP
 .B a
