Make navigate_frame command respect a count prefix

--- a/sxiv.1
+++ b/sxiv.1
@@ -228,10 +228,14 @@ Go
 .SS Handle multi-frame images
 .TP
 .B Ctrl-n
-Go to the next frame of a multi-frame image.
+Go
+.I count
+frames of a multi-frame image forward.
 .TP
 .B Ctrl-p
-Go to the previous frame of a multi-frame image.
+Go
+.I count
+frames of a multi-frame image backward.
 .TP
 .B Ctrl-Space
 Play/stop animations of multi-frame images.
