Added -R option to randomize slideshow image order
When staring sxiv with -R command-line option and starting slideshow mode,
fileidx of the next image to be loaded will be randomized. This is done using
rand() and thus does not provide cryptographical-strength pseudo-random number
generation, but should nevertheless be good enough for viewing images in
random order.
This does *not* randomize the file order itself, e.g. when using shortcuts for
next/previous images; doing so would require either (a) randomizing the file
list itself on startup or (b) managing a linked list of the random sequence.
Both options have drawbacks in my point of view.

--- a/sxiv.1
+++ b/sxiv.1
@@ -74,6 +74,9 @@ Be quiet, disable warnings to standard error stream.
 .B \-r
 Search the given directories recursively for images to view.
 .TP
+.B \-R
+Randomize image order in slideshow mode
+.TP
 .BI "\-S " DELAY
 Start in slideshow mode. Set the delay between images to DELAY seconds.
 .TP
