Update documentation to include images from stdin

--- a/sxiv.1
+++ b/sxiv.1
@@ -19,6 +19,19 @@ sxiv \- Simple X Image Viewer
 .RB [ \-z
 .IR ZOOM ]
 .IR FILE ...
+.P
+.B sxiv
+.RB [ OPTIONS ]
+<
+.I FILE
+.P
+.B sxiv
+.RB [ OPTIONS ]
+.RI [ FILES ] 
+\-
+.RI [ FILES ]
+<
+.I FILE
 .SH DESCRIPTION
 sxiv is a simple image viewer for X. It only has the most basic features
 required for fast image viewing.
