--- a/sxiv.1
+++ b/sxiv.1
@@ -16,6 +16,8 @@ sxiv \- Simple X Image Viewer
 .IR NAME ]
 .RB [ \-n
 .IR NUM ]
+.RB [ \-p
+.IR NUM ]
 .RB [ \-S
 .IR DELAY ]
 .RB [ \-s
@@ -28,7 +30,7 @@ sxiv is a simple image viewer for X. It only has the most basic features
 required for fast image viewing.
 .P
 sxiv has two modes of operation: image and thumbnail mode. The default is image
-mode, in which only the current image is shown. In thumbnail mode a grid of 
+mode, in which only the current image is shown. In thumbnail mode a grid of
 small previews is displayed, making it easy to choose an image to open.
 .P
 Please note, that the fullscreen mode requires an EWMH/NetWM compliant window
@@ -68,6 +70,9 @@ Set the resource name of sxiv's X window to NAME.
 .BI "\-n " NUM
 Start at picture number NUM.
 .TP
+.BI "\-p " NUM
+Pan the image by 1/NUM of the window's height/width on scroll.
+.TP
 .B \-h
 Print brief usage information to standard output and exit.
 .TP
@@ -94,7 +99,7 @@ seconds.
 may be a floating point number.
 .TP
 .BI "\-s " MODE
-Set scale mode according to MODE character. Supported modes are: [d]own, 
+Set scale mode according to MODE character. Supported modes are: [d]own,
 [f]it, [w]idth, [h]eight.
 .TP
 .B \-t
