Add Max Voit to list of contributors

--- a/sxiv.1
+++ b/sxiv.1
@@ -426,6 +426,7 @@ Bert Muennich   <ber.t at posteo.de>
 Bastien Dejean  <nihilhill at gmail.com>
 Dave Reisner    <d at falconindy.com>
 Fung SzeTat     <sthorde at gmail.com>
+Max Voit        <mvdev at with-eyes.net>
 .EE
 .SH HOMEPAGE
 .EX
