Improve mouse support
None of the mouse mappings uses a keyboard modifier, making it possible to
access the most basic features by only using the mouse.

Next/previous image with left button depending on cursor position, middle
button for dragging, right button for switching to thumnail mode and wheel for
zooming.

Users can keep the old behaviour by simply not adapting the changes to the
buttons array in config.def.h to their config.h file.

--- a/sxiv.1
+++ b/sxiv.1
@@ -348,37 +348,27 @@ seconds.
 .SH MOUSE COMMANDS
 The following mouse mappings are available in image mode:
 .TP
+General:
+.TP
+.B Button3
 Navigate image list:
 .TP
 .B Button1
-Go to next image.
-.TP
-.B Button3
-Go to the previous image.
+Go to the next image if the mouse cursor is in the right part of the window or
+to the previous image if it is in the left part.
 .TP
 Panning:
 .TP
 .B Button2
-Drag the image with the mouse while keeping this button pressed down.
-.TP
-.B ScrollUp
-Scroll image up.
-.TP
-.B ScrollDown
-Scroll image down.
-.TP
-.B Shift+ScrollUp
-Scroll image left.
-.TP
-.B Shift+ScrollDown
-Scroll image right.
+Pan the image according to the mouse cursor position in the window while
+keeping this button pressed down.
 .TP
 Zooming:
 .TP
-.B Ctrl+ScrollUp
+.B ScrollUp
 Zoom in.
 .TP
-.B Ctrl+ScrollDown
+.B ScrollDown
 Zoom out.
 .SH STATUS BAR
 The information displayed on the left side of the status bar can be replaced
