Add missing description for Button3 to man page

--- a/sxiv.1
+++ b/sxiv.1
@@ -351,6 +351,8 @@ The following mouse mappings are available in image mode:
 General:
 .TP
 .B Button3
+Switch to thumbnail mode.
+.TP
 Navigate image list:
 .TP
 .B Button1
