Add mark range function
Sets the marked state of all images ranging from the latest marked/unmarked
image to the current image, to the state of that latest toggled image.

--- a/sxiv.1
+++ b/sxiv.1
@@ -172,6 +172,10 @@ Mark/unmark the current image.
 .B M
 Reverse all image marks.
 .TP
+.B Ctrl-M
+Repeat last mark action on all images from the last marked/unmarked up to the
+current one.
+.TP
 .B Ctrl-m
 Remove all image marks.
 .TP
