key-handler: Add a C-x C-h help dialog

--- a/sxiv.1
+++ b/sxiv.1
@@ -404,6 +404,8 @@ keysym as listed in /usr/include/X11/keysymdef.h without the "XK_" prefix.
 
 There is also an example script installed together with sxiv as
 .IR PREFIX/share/sxiv/exec/key-handler .
+
+If you use the example script, press C-x C-h for a list of all key handlers.
 .SH THUMBNAIL CACHING
 sxiv stores all thumbnails under
 .IR $XDG_CACHE_HOME/sxiv/ .
