Document undocumented "-" behavior
See #84

--- a/sxiv.1
+++ b/sxiv.1
@@ -3,7 +3,8 @@
 sxiv \- Simple X Image Viewer
 .SH SYNOPSIS
 .B sxiv
-.RB [ \-abcfhiopqrtvZ ]
+.RB [ \-abcfhopqrtvZ ]
+.RB [ \-i\ |\ \- ]
 .RB [ \-A
 .IR FRAMERATE ]
 .RB [ \-e
@@ -71,7 +72,7 @@ Start at picture number NUM.
 .B \-h
 Print brief usage information to standard output and exit.
 .TP
-.B \-i
+.B \-i, \-
 Read names of files to open from standard input.
 .TP
 .B \-o
