Document undocumented "-" behavior

--- a/sxiv.1
+++ b/sxiv.1
@@ -72,7 +72,7 @@ Start at picture number NUM.
 Print brief usage information to standard output and exit.
 .TP
 .B \-i
-Read names of files to open from standard input.
+Read names of files to open from standard input. Also done if FILE is `-'.
 .TP
 .B \-o
 Write list of all marked files to standard output when quitting. In combination
