--- a/sxiv.1
+++ b/sxiv.1
@@ -27,7 +27,7 @@ sxiv \- Simple X Image Viewer
 sxiv is a simple image viewer for X.
 .P
 It has two modes of operation: image and thumbnail mode. The default is image
-mode, in which only the current image is shown. In thumbnail mode a grid of 
+mode, in which only the current image is shown. In thumbnail mode a grid of
 small previews is displayed, making it easy to choose an image to open.
 .P
 Please note, that the fullscreen mode requires an EWMH/NetWM compliant window
@@ -96,7 +96,7 @@ seconds.
 may be a floating point number.
 .TP
 .BI "\-s " MODE
-Set scale mode according to MODE character. Supported modes are: [d]own, 
+Set scale mode according to MODE character. Supported modes are: [d]own,
 [f]it, [w]idth, [h]eight.
 .TP
 .B \-t
@@ -414,6 +414,16 @@ afterwards inside the cache directory to remove empty subdirectories:
 .P
 .RS
 find . \-depth \-type d \-empty ! \-name '.' \-exec rmdir {} \\;
+.RE
+.SH X RESOURCES
+sxiv's background colors can be changed in your XResources file using
+.IR Sxiv.foreground
+and
+.IR Sxiv.background
+.P
+After you change your XResources file you need to reload it with
+.RS
+xrdb -load .Xresources
 .RE
 .SH AUTHOR
 .EX
