Hint to xrdb for changing X resources

--- a/sxiv.1
+++ b/sxiv.1
@@ -386,6 +386,8 @@ Color of the window foreground and bar background
 .TP
 .B font
 Name of Xft bar font
+.TP
+Please see xrdb(1) on how to change them.
 .SH STATUS BAR
 The information displayed on the left side of the status bar can be replaced
 with the output of a user-provided script, which is called by sxiv whenever an
