--- a/sxiv.1
+++ b/sxiv.1
@@ -16,6 +16,8 @@ sxiv \- Simple X Image Viewer
 .IR NAME ]
 .RB [ \-n
 .IR NUM ]
+.RB [ \-F
+.IR FILE ]
 .RB [ \-S
 .IR DELAY ]
 .RB [ \-s
@@ -66,6 +68,9 @@ Set the resource name of sxiv's X window to NAME.
 .TP
 .BI "\-n " NUM
 Start at picture number NUM.
+.TP
+.BI "\-F " FILE
+Start at picture file FILE.
 .TP
 .B \-h
 Print brief usage information to standard output and exit.
