--- a/sxiv.1
+++ b/sxiv.1
@@ -379,10 +379,13 @@ Zoom out.
 The following X resources are supported:
 .TP
 .B background
-Color of the window background and bar foreground
+Color of the window background
 .TP
 .B foreground
 Color of the window foreground and bar background
+.TP
+.B textColor
+Color of the text in the bar
 .TP
 .B font
 Name of Xft bar font
