--- a/sxiv.1
+++ b/sxiv.1
@@ -379,13 +379,13 @@ Zoom out.
 The following X resources are supported:
 .TP
 .B background
-Color of the window background
+Color of the window background and bar foreground
 .TP
 .B foreground
-Color of the window foreground and bar background
+Color of the window foreground
 .TP
-.B textColor
-Color of the text in the bar
+.B barBackground
+Color of the bar background
 .TP
 .B font
 Name of Xft bar font
