wider thumbs, smarter opts

--- a/sxiv.1
+++ b/sxiv.1
@@ -1,9 +1,9 @@
 .TH SXIV 1 sxiv\-VERSION
 .SH NAME
-sxiv \- Simple X Image Viewer
+sxiv \- Simple X Image Viewer (Naheel's fork)
 .SH SYNOPSIS
 .B sxiv
-.RB [ \-abcfhiopqrtvZ ]
+.RB [ \-abcfhiopqrtvZO ]
 .RB [ \-A
 .IR FRAMERATE ]
 .RB [ \-e
@@ -112,6 +112,9 @@ Print version information to standard output and exit.
 .TP
 .B \-Z
 The same as `\-z 100'.
+.TP
+.B \-O
+Run in the old mode. That is, the original sxiv.
 .TP
 .BI "\-z " ZOOM
 Set zoom level to ZOOM percent.
