allow window title to be set at runtime with -T option

--- a/sxiv.1
+++ b/sxiv.1
@@ -14,6 +14,8 @@ sxiv \- Simple X Image Viewer
 .IR GEOMETRY ]
 .RB [ \-N
 .IR NAME ]
+.RB [ \-T
+.IR TITLE ]
 .RB [ \-n
 .IR NUM ]
 .RB [ \-S
@@ -63,6 +65,9 @@ more information on GEOMETRY argument.
 .TP
 .BI "\-N " NAME
 Set the resource name of sxiv's X window to NAME.
+.TP
+.BI "\-T " TITLE
+Set the title of sxiv's X window to TITLE.
 .TP
 .BI "\-n " NUM
 Start at picture number NUM.
