breaking change: bar is hidden by default. -b shows the bar

--- a/sxiv.1
+++ b/sxiv.1
@@ -44,7 +44,7 @@ Play animations with a constant frame rate set to
 Play animations of multi-frame images.
 .TP
 .B \-b
-Do not show info bar on bottom of window.
+Show info bar on bottom of window.
 .TP
 .B \-c
 Remove all orphaned cache files from the thumbnail cache directory and exit.
