--- a/sxiv.1
+++ b/sxiv.1
@@ -27,7 +27,7 @@ sxiv \- Simple X Image Viewer
 sxiv is a simple image viewer for X.
 .P
 It has two modes of operation: image and thumbnail mode. The default is image
-mode, in which only the current image is shown. In thumbnail mode a grid of 
+mode, in which only the current image is shown. In thumbnail mode a grid of
 small previews is displayed, making it easy to choose an image to open.
 .P
 Please note, that the fullscreen mode requires an EWMH/NetWM compliant window
@@ -96,8 +96,8 @@ seconds.
 may be a floating point number.
 .TP
 .BI "\-s " MODE
-Set scale mode according to MODE character. Supported modes are: [d]own, 
-[f]it, [w]idth, [h]eight.
+Set scale mode according to MODE character. Supported modes are: [d]own,
+[f]it, [F]ill, [w]idth, [h]eight.
 .TP
 .B \-t
 Start in thumbnail mode.
@@ -310,6 +310,9 @@ Set zoom level to 100%, but fit large images into window.
 .TP
 .B W
 Fit image to window.
+.TP
+.B F
+Fill image to window.
 .TP
 .B e
 Fit image to window width.
