--- a/sxiv.1
+++ b/sxiv.1
@@ -382,10 +382,13 @@ Zoom out.
 The following X resources are supported:
 .TP
 .B background
-Color of the window background and bar foreground
+Color of the window background
 .TP
-.B foreground
-Color of the window foreground and bar background
+.B barcolor
+Color of the bar background
+.TP
+.B textcolor
+Color of the bar foreground
 .TP
 .B font
 Name of Xft bar font
