fix: foreground color shouldn't be the same as bar

--- a/sxiv.1
+++ b/sxiv.1
@@ -384,6 +384,9 @@ The following X resources are supported:
 .B background
 Color of the window background
 .TP
+.B foreground
+Color of the window foreground
+.TP
 .B barcolor
 Color of the bar background
 .TP
