rename bar and text color Xresources name

--- a/sxiv.1
+++ b/sxiv.1
@@ -387,10 +387,10 @@ Color of the window background
 .B foreground
 Color of the window foreground
 .TP
-.B barcolor
+.B bar
 Color of the bar background
 .TP
-.B textcolor
+.B text
 Color of the bar foreground
 .TP
 .B font
