add warning to manpage when using -dF together

--- a/sxiv.1
+++ b/sxiv.1
@@ -73,7 +73,8 @@ Set the resource name of sxiv's X window to NAME.
 Start at picture number NUM.
 .TP
 .BI "\-F " FILE
-Start at picture file FILE.
+Start at picture file FILE. May conflict with 
+.B \-d
 .TP
 .B \-h
 Print brief usage information to standard output and exit.
