change repo and description in manpage and readme

--- a/sxiv.1
+++ b/sxiv.1
@@ -455,6 +455,7 @@ Bert Muennich   <ber.t at posteo.de>
 .EE
 .SH CONTRIBUTORS
 .EX
+GRFreire        <root at grfreire.com>
 Bastien Dejean  <nihilhill at gmail.com>
 Dave Reisner    <d at falconindy.com>
 Fung SzeTat     <sthorde at gmail.com>
@@ -462,7 +463,7 @@ Max Voit        <mvdev at with-eyes.net>
 .EE
 .SH HOMEPAGE
 .EX
-https://github.com/muennich/sxiv
+https://github.com/GRFreire/sxiv
 .EE
 .SH SEE ALSO
 .BR X (7),
