add maintainer to man page

--- a/sxiv.1
+++ b/sxiv.1
@@ -449,13 +449,16 @@ afterwards inside the cache directory to remove empty subdirectories:
 .RS
 find . \-depth \-type d \-empty ! \-name '.' \-exec rmdir {} \\;
 .RE
+.SH MAINTAINER
+.EX
+GRFreire        <root at grfreire.com>
+.EE
 .SH AUTHOR
 .EX
 Bert Muennich   <ber.t at posteo.de>
 .EE
 .SH CONTRIBUTORS
 .EX
-GRFreire        <root at grfreire.com>
 Bastien Dejean  <nihilhill at gmail.com>
 Dave Reisner    <d at falconindy.com>
 Fung SzeTat     <sthorde at gmail.com>
