--- a/sxiv.1
+++ b/sxiv.1
@@ -430,7 +430,7 @@ find . \-depth \-type d \-empty ! \-name '.' \-exec rmdir {} \\;
 .RE
 .SH AUTHOR
 .EX
-Bert Muennich   <ber.t at posteo.de>
+Bert Muennich   <xyb3rt at gmail.com>
 .EE
 .SH CONTRIBUTORS
 .EX
@@ -441,7 +441,7 @@ Max Voit        <mvdev at with-eyes.net>
 .EE
 .SH HOMEPAGE
 .EX
-https://github.com/muennich/sxiv
+https://github.com/xyb3rt/sxiv
 .EE
 .SH SEE ALSO
 .BR X (7),
